--- a/src/app.css
+++ b/src/app.css
@@ -52,6 +52,10 @@ li{
     font-weight:500;
 }
 .btn:hover{
+     background: var(pink);
+}
+
+.btn:hover a{
     color:var(--secondary-color);
 }
 .secIntro{
@@ -73,7 +77,63 @@ img, video {
     width:100%;
     height:auto;
 }
+
 input{
     font-size:100%;
+
+    @media screen and (min-width: 556px) {
+    .mainContent, .singlePost {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (min-width: 884px) {
+    .mainContent {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .container {
+        width: 75% !important;
+        margin: auto !important;
+    }
+    .section {
+        padding: 5rem 0 3rem;
+    }
+    .secIntro {
+        margin: 0 auto 3rem;
+    }
+    .secIntro .secTitle {
+        line-height: 2rem;
+        padding-bottom: 1rem;
+        font-size: 2.2rem;
+    }
+    .secIntro p {
+        font-size: 15px;
+    }
+}
+
+@media screen and (min-width: 2560px) {
+    body {
+        zoom: 1.7;
+    }
+}
+
+/* page */
+::selection {
+    color: pink;
+    background: var(--primary-color);
+}
+::-webkit-scrollbar {
+    width: 10px;
+    background: purple;
+}
+::-webkit-scrollbar-thumb {
+    background: palegoldenrod;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
 }
 
