--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -1,3 +1,59 @@
+.about .secContainer .title {
+  color: black;
+  line-height: 1.5rem;
+  padding-bottom: 0.5rem;
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+.about .secContainer .mainContent {
+  gap: 0.1rem;
+}
+
+.about .secContainer .mainContent .singleItem {
+  text-align: center;
+}
+
+.about .secContainer .mainContent .singleItem img {
+  background: brown;
+  width: 100px;
+  border-radius: 50%;
+  padding: 1rem;
+}
+
+.about .secContainer .mainContent .singleItem h3 {
+  font-weight: 700;
+  color: black;
+  padding: 0.5rem;
+}
+
+.about .secContainer .mainContent .singleItem p {
+  font-size: 13px;
+  font-weight: 500;
+  padding-bottom: 0.5rem;
+  color: white;
+}
+
+.about .secContainer .mainContent .singleItem .cardContent {
+  gap: 2rem;
+  padding: 1rem 2rem;
+}
+
+.about .secContainer .mainContent .singleItem .cardContent .cardText h2 {
+  color: black;
+  font-weight: 600;
+  padding-bottom: 1rem;
+}
+
+.about .secContainer .mainContent .singleItem .cardContent .cardText p {
+  color: black;
+  opacity: 0.7;
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+
+
 @media screen and (min-width: 884px) {
     .about .SetContainer .videoCard .cardContent {
         gap: 4rem;
