--- a/src/Components/Blog/blog.css
+++ b/src/Components/Blog/blog.css
@@ -1,5 +1,61 @@
 /* media 
 */
+.blog .mainContainer {
+    gap: 1rem;
+  }
+  
+  .blog .mainContainer .singlePost {
+    gap: 2rem;
+  }
+  
+  .blog .mainContainer .singlePost .imgDiv {
+    height: 200px;
+    width: 100%;
+    border-radius: 2rem;
+    box-shadow: grey;
+    overflow: hidden;
+    border: 5px solid black;
+  }
+  
+  .blog .mainContainer .singlePost .imgDiv:hover img {
+    transform: scale(1.1);
+    transition: 3s ease;
+  }
+  
+  .blog .mainContainer .singlePost .imgDiv img {
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .blog .mainContainer .singlePost .postDeatils h3 {
+    color: black;
+    font-weight: 600;
+    padding-bottom: 10px;
+  }
+  
+  .blog .mainContainer .singlePost .postDeatils p {
+    font-size: 13px;
+    color: black;
+    font-weight: 500;
+  }
+  
+  .blog .mainContainer .singlePost .postDeatils a {
+    font-size: 15px;
+    color: black;
+    font-weight: 500;
+    padding-top: 0.5rem;
+    width: max-content;
+  }
+  
+  .blog .mainContainer .singlePost .postDeatils a:hover {
+    color: orange;
+    font-weight: 600;
+  }
+  
+  .blog .mainContainer .singlePost .postDeatils a:hover .icon {
+    transform: translateX(10px);
+  }
+  
 @media screen and (min-width: 884px) {
     .blog .mainContainer {
         grid-template-columns: repeat(2, 1fr);
