--- a/src/Components/Blog/blog.css
+++ b/src/Components/Blog/blog.css
@@ -1,63 +1,72 @@
-/* media 
-*/
-.blog .mainContainer {
-    gap: 1rem;
-  }
-  
-  .blog .mainContainer .singlePost {
-    gap: 2rem;
-  }
-  
-  .blog .mainContainer .singlePost .imgDiv {
-    height: 200px;
-    width: 100%;
-    border-radius: 2rem;
-    box-shadow: grey;
-    overflow: hidden;
-    border: 5px solid black;
-  }
-  
-  .blog .mainContainer .singlePost .imgDiv:hover img {
-    transform: scale(1.1);
-    transition: 3s ease;
-  }
-  
-  .blog .mainContainer .singlePost .imgDiv img {
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .blog .mainContainer .singlePost .postDeatils h3 {
-    color: black;
-    font-weight: 600;
-    padding-bottom: 10px;
-  }
-  
-  .blog .mainContainer .singlePost .postDeatils p {
-    font-size: 13px;
-    color: black;
-    font-weight: 500;
-  }
-  
-  .blog .mainContainer .singlePost .postDeatils a {
-    font-size: 15px;
-    color: black;
-    font-weight: 500;
-    padding-top: 0.5rem;
-    width: max-content;
-  }
-  
-  .blog .mainContainer .singlePost .postDeatils a:hover {
-    color: orange;
-    font-weight: 600;
-  }
-  
-  .blog .mainContainer .singlePost .postDeatils a:hover .icon {
-    transform: translateX(10px);
-  }
-  
+.blogContainer .secContainer .mainContainer {
+  gap: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.blogContainer .secContainer .mainContainer .singlePost {
+  gap: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px; /* Set a fixed width for the posts */
+}
+
+.blogContainer .secContainer .mainContainer .singlePost .imgDiv {
+  height: 200px;
+  width: 100%;
+  border-radius: 2rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  border: 5px solid black;
+}
+
+.blogContainer .secContainer .mainContainer .singlePost .imgDiv:hover img {
+  transform: scale(1.1);
+  transition: transform 3s ease;
+}
+
+.blogContainer .secContainer .mainContainer .singlePost .imgDiv img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.blogContainer .secContainer .mainContainer .singlePost .postDetails h3 {
+  color: black;
+  font-weight: 600;
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+.blogContainer .secContainer .mainContainer .singlePost .postDetails p {
+  font-size: 13px;
+  color: black;
+  font-weight: 500;
+  text-align: center;
+}
+
+.blogContainer .secContainer .mainContainer .singlePost .postDetails a {
+  font-size: 15px;
+  color: black;
+  font-weight: 500;
+  padding-top: 0.5rem;
+  width: max-content;
+  display: inline-block;
+}
+
+.blogContainer .secContainer .mainContainer .singlePost .postDetails a:hover {
+  color: orange;
+  font-weight: 600;
+}
+
+.blogContainer .secContainer .mainContainer .singlePost .postDetails a:hover .icon {
+  transform: translateX(10px);
+}
+
 @media screen and (min-width: 884px) {
-    .blog .mainContainer {
-        grid-template-columns: repeat(2, 1fr);
-    }
+  .blogContainer .secContainer .mainContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
