--- a/src/Components/Popular/popular.css
+++ b/src/Components/Popular/popular.css
@@ -1,227 +1,225 @@
-.popular{
+.popular {
     padding-top: 15rem;
-
-    .secContainer{
-        .secHeader{
-            flex-direction: column;
-            align-items: flex-start;
-            gap:1rem;
-
-            .textDiv{
-                .secTitle{
-                    color:black;
-                    line-height: 1.5rem;
-                    padding-bottom: .5rem;
-                }
-                p {
-                    font-size: 13px;
-                    color:black;
-                    font-weight: 500;
-                }
-            }
-
-            .iconsDiv{
-                gap:.5rem;
-                .icon{
-                    padding: .5rem;
-                    background-color: grey;
-                    border-radius: 50%;
-                    font-size: 2.5rem;
-                    &:hover{
-                        background-color:black;
-                        column-rule:white;
-                    }
-                }
-
-                .leftIcon{
-                    background-color: black;
-                    color:white;
-                    &:hover{
-                        background-color: grey;
-                        color:black;
-                    }
-                }
-
-                .rightIcon{
-                    background-color: black;
-                    color:white;
-                    &:hover{
-                        background-color: grey;
-                        color:black;
-                    }
-                }
-            }
-        }
-        .mainContent{
-            padding: 2rem 0;
-            gap:1rem;
-
-            .singleDestination{
-                overflow:hidden;
-                border-radius:1rem;
-                box-shadow: 0 2px 8px 2px rgba(178, 178, 178, 0.334);
-                
-                .destImage{
-                    height:200px;
-                    width:100%;
-                    position:relative;
-                    overflow: hidden;
-                    img{
-                        height: 100%;
-                        width: 100%;
-                        object-fit: cover;
-                    }
-
-                    .overlayInfo{
-                        position:absolute;
-                        display:flex;
-                        padding:0;
-                        align-items: flex-start;
-                        justify-content: center;
-                        flex-direction: column;
-                        background-color: rgba(0,0,0, 0.759);
-                        bottom: 0;
-                        width: 100%;
-                        height: 0;
-                        overflow: hidden;
-
-                        h3{
-                            color:white;
-                            font-weight: 600;
-                        }
-                        p{
-                            color:white;
-                            opacity:.7;
-                            font-size: 13px;
-                        }
-                        .icon{
-                            color:white;
-                            position: absolute;
-                            right: 10px;
-                            bottom:10px;
-                            padding:.5rem;
-                            background-color: green;
-                            font-size: 2.5rem;
-                            border-radius: 50%;
-                            border:1px solid transparent;
-                            transition: .3s ease;
-
-                            &:hover{
-                                background-color:black;
-                                border:1px solid green;
-                            }
-
-                        }
-
-                    }
-                }
-                .destFooter{
-                    padding:1rem;
-
-                    .number{
-                        font-size: 2rem;
-                        font-weight: 700;
-                        color:black;
-                        position: relative;
-                        width: max-content;
-
-                        &::after{
-                            content: '';
-                            position: absolute;
-                            background-color: green;
-                            top:45%;
-                            right:-150%;
-                            height:5px;
-                            width:45px;
-                            border-radius: 1rem;
-                        }
-                    }
-
-                    .destText{
-                        display: flex;
-                        justify-content: space-between;
-
-                        h6{
-                            color:black;
-                            font-size: 15px;
-                        }
-
-                        .flex{
-                            font-size: 16px;
-                            font-weight: 600;
-                            align-items: flex-start;
-                            transform: translateY(5px);
-
-                            .icon{
-                                color:green;
-                            }
-                        }
-                    }
-                }
-
-                &:hover{
-                    .overlayInfo{
-                        overflow:visible;
-                        padding:1rem 1.5rem;
-                        height:100%;
-                    }
-                    
-                }
-            }
-        }
-    }
-
-}
-
-
-
-/*media
-*/
-@media screen and (min-width: 480px) {
+  }
+  
+  .popular .secContainer .secHeader {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+  }
+  
+  .popular .secContainer .secHeader .textDiv .secTitle {
+    color: #0a2463;
+    line-height: 1.5rem;
+    padding-bottom: .5rem;
+  }
+  
+  .popular .secContainer .secHeader .textDiv p {
+    font-size: 13px;
+    color: #0a2463;
+    font-weight: 500;
+  }
+  
+  .popular .secContainer .secHeader .iconsDiv {
+    gap: .5rem;
+  }
+  
+  .popular .secContainer .secHeader .iconsDiv .icon {
+    padding: .5rem;
+    background-color:#0a2463;
+    border-radius: 50%;
+    font-size: 2.5rem;
+    transition: background-color 0.3s;
+  }
+  
+  .popular .secContainer .secHeader .iconsDiv .icon:hover {
+    background-color: #E8C547;
+    color: white;
+  }
+  
+  .popular .secContainer .secHeader .iconsDiv .leftIcon {
+    background-color: #0a2463;
+    color: white;
+  }
+  
+  .popular .secContainer .secHeader .iconsDiv .leftIcon:hover {
+    background-color: #E8C547;
+    color: white;
+  }
+  
+  .popular .secContainer .secHeader .iconsDiv .rightIcon {
+    background-color: #0a2463;
+    color: white;
+  }
+  
+  .popular .secContainer .secHeader .rightIcon:hover {
+    background-color:#E8C547;
+    color: white;
+  }
+  
+  .popular .secContainer .mainContent {
+    padding: 2rem 0;
+    gap: 1rem;
+  }
+  
+  .popular .secContainer .mainContent .singleDestination {
+    overflow: hidden;
+    border-radius: 1rem;
+    box-shadow: 0 2px 8px 2px rgba(178, 178, 178, 0.334);
+  }
+  
+  .popular .secContainer .mainContent .singleDestination .destImage {
+    height: 200px;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .popular .secContainer .mainContent .singleDestination .destImage img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+  
+  .popular .secContainer .mainContent .singleDestination .destImage .overlayInfo {
+    position: absolute;
+    display: flex;
+    padding: 0;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.759);
+    bottom: 0;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    transition: height 0.3s;
+  }
+  
+  .popular .secContainer .mainContent .singleDestination .destImage .overlayInfo h3 {
+    color: white;
+    font-weight: 600;
+  }
+  
+  .popular .secContainer .mainContent .singleDestination .destImage .overlayInfo p {
+    color: white;
+    opacity: .7;
+    font-size: 13px;
+  }
+  
+  .popular .secContainer .mainContent .singleDestination .destImage .overlayInfo .icon {
+    color: white;
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    padding: .5rem;
+    background-color: #E8C547;
+    font-size: 2.5rem;
+    border-radius: 50%;
+    border: 1px solid transparent;
+    transition: background-color 0.3s, border 0.3s;
+  }
+  
+  .popular .secContainer .mainContent .singleDestination .destImage .overlayInfo .icon:hover {
+    background-color:pink;
+  }
+  
+  .popular .secContainer .mainContent .singleDestination .destFooter {
+    padding: 1rem;
+  }
+  
+  .popular .secContainer .mainContent .singleDestination .destFooter .number {
+    font-size: 2rem;
+    font-weight: 700;
+    color: #0a2463;
+    position: relative;
+    width: max-content;
+  }
+  
+  .popular .secContainer .mainContent .singleDestination .destFooter .number::after {
+    content: '';
+    position: absolute;
+    background-color:pink;
+    top: 45%;
+    right: -150%;
+    height: 5px;
+    width: 45px;
+    border-radius: 1rem;
+  }
+  
+  .popular .secContainer .mainContent .singleDestination .destFooter .destText {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .popular .secContainer .mainContent .singleDestination .destFooter .destText h6 {
+    color: #0a2463;
+    font-size: 15px;
+  }
+  
+  .popular .secContainer .mainContent .singleDestination .destFooter .destText .flex {
+    font-size: 16px;
+    font-weight: 600;
+    align-items: flex-start;
+    transform: translateY(5px);
+  }
+  
+  .popular .secContainer .mainContent .singleDestination .destFooter .destText .flex .icon {
+    color: green;
+  }
+  
+  .popular .secContainer .mainContent .singleDestination:hover .overlayInfo {
+    overflow: visible;
+    padding: 1rem 1.5rem;
+    height: 100%;
+  }
+  
+  @media screen and (min-width: 480px) {
     .popular {
-        padding-top: 10rem;
-    }   
-}
-
-@media screen and (min-width: 556px) {
+      padding-top: 10rem;
+    }
+  }
+  
+  @media screen and (min-width: 556px) {
     .popular .secContainer .secHeader {
-        width: 100%;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
+      width: 100%;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
     }
-
+  
     .popular .secContainer .secHeader .textDiv {
-        text-align: start;
-        max-width: 70%;
+      text-align: start;
+      max-width: 70%;
     }
-
+  
     .popular .secContainer .secHeader .iconsDiv {
-        justify-content: flex-end;
+      justify-content: flex-end;
     }
-}
-
-@media screen and (min-width: 720px) {
+  }
+  
+  @media screen and (min-width: 720px) {
     .popular {
-        padding-top: 7rem;
-    }   
-}
-
-@media screen and (min-width: 1024px) {
-    .popular {
-        padding-top: 10rem;
+      padding-top: 7rem;
     }
-
+  }
+  
+  @media screen and (min-width: 1024px) {
+    .popular {
+      padding-top: 10rem;
+    }
+  
     .popular .secContainer .secHeader .textDiv .secTitle {
-        font-size: 2.2rem;
+      font-size: 2.2rem;
     }
-
+  
     .popular .secContainer .secHeader .textDiv p {
-        font-size: 15px;
+      font-size: 15px;
     }
-
+  
     .popular .secContainer .mainContent {
-        grid-template-columns: repeat(4, 1fr);
-        gap: 1.5rem !important;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 1.5rem !important;
     }
-}
+  }
+  
