--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,6 +1,6 @@
 .home {
     height: 80vh;
-    background: linear-gradient(rgba(33,33,33,0.522), rgba(33,33,33,0.522)), url('../../assets/viber_image_2024-05-21_13-27-11-954.jpg');
+    background: linear-gradient(rgba(33,33,33,0.522), rgba(33,33,33,0.522)), url('../../assets/mostar.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
