--- a/src/Components/Popular/popular.css
+++ b/src/Components/Popular/popular.css
@@ -3,8 +3,9 @@
   }
   
   .popular .secContainer .secHeader {
+    display:flex;
     flex-direction: column;
-    align-items: flex-start;
+    justify-content: center;
     gap: 1rem;
   }
   
