--- a/src/app.css
+++ b/src/app.css
@@ -53,7 +53,7 @@ li{
     margin: 0 auto 2rem;
 }
 .secIntro .secTitle {
-    color:azure;
+    color:#0A2463;
     line-height: 1.5rem;
     padding-bottom: .5rem;
 }
@@ -66,7 +66,9 @@ img, video {
     width:100%;
     height:auto;
 }
-
+.title {
+    color:#0A2463;
+}
 input{
     font-size:100%;
 
