final update sve

--- a/src/Components/Register/register.css
+++ b/src/Components/Register/register.css
@@ -1,17 +1,16 @@
-
+/* login.css */
 .container-login {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: white; 
+    background-color: white;
   }
   
   .login-content {
-    background-color: pink;
+    background-color: pink; 
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-    padding: 40px;
   }
   
   .login-content form {
@@ -118,13 +117,5 @@
     margin: 0;
   }
   
-  .error-message {
-    color: #dc3545;
-    margin-top: 10px;
-	margin-bottom:10px;
-    text-align: center;
-  }
-  .forgotPass{
-    padding: 10px;
-  }
+
   
