--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -1,4 +1,7 @@
+
 .container-contact {
+  margin-top:5rem;
+  margin-bottom:5rem;
   display: flex;
   justify-content: center;
   align-items: center;
